feat: Java 14 advanced switch statements.